--- a/client_side/MenuApp_iOS/Podfile
+++ b/client_side/MenuApp_iOS/Podfile
@@ -1,8 +1,8 @@
-platform :ios, '9.0'
+platform :ios, '9.3'
 use_frameworks!
 pod 'Alamofire', '~> 3.0'
 pod 'SwiftyJSON', :git => 'https://github.com/SwiftyJSON/SwiftyJSON.git'
-pod 'SVProgressHUD', :head
+pod 'SVProgressHUD'
 pod 'SCLAlertView'
 
 target 'MenuApp' do
